nesc-frontend/src/test/resources/integration/programs/bad/bad16/C.nc
/* Posting a normal function. */

configuration C
{
}
implementation
{
   components M;
}
